Fix alignment of numbering in privacy policy
Fixes issue #777

--- a/site/components/policy/policy-box/style.css
+++ b/site/components/policy/policy-box/style.css
@@ -10,22 +10,31 @@
 }
 
 .numberContainer {
-  margin-right: 30px;
+  width: 40px;
+}
+
+@media mediumScreen {
+  .numberContainer {
+    width: 50px;
+  }
 }
 
 .number {
   composes: boldSansSerif from '../../../css/typography/_fonts.css';
   font-size: 16px;
   line-height: 1.1;
-  border-bottom: 5px solid #FC1D42;
-  display: block;
+  border-bottom: 5px solid #fc1d42;
   position: relative;
   top: -2px;
 }
 
+.policyHeader {
+  flex: 1;
+}
+
 .policyText {
+  flex: 1;
   max-width: 610px;
-  width: 100%;
   margin-bottom: 10px;
 }
 
@@ -38,4 +47,3 @@
     top: -9px;
   }
 }
-
